--- a/backend/config/config.env
+++ b/backend/config/config.env
@@ -4,7 +4,7 @@ CLOUDINARY_API_SECRET=Et_aXQYKx7qiV4rkV2ZqIJMuWs0
 SMTP_HOST=smtp.gmail.com
 COOKIE_EXPIRE=4
 PORT=4000
-FRONTEND_URL=http://localhost:5173
+FRONTEND_URL=https://devdotjobs.netlify.app
 JWT_SECRET_KEY=i-love-my-code-143
 JWT_EXPIRE=7d
 SMTP_PORT=465
